@startuml
set namespaceSeparator ::

class "appchat::main.dart::App" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "appchat::main.dart::App"

class "appchat::src::providers::authenrication_provider.dart::AuthenticationProvider" {
  -GoogleSignIn _googleSignIn
  -GoogleSignInAccount _currentUser
  -bool _isSignedIn
  +GoogleSignInAccount currentUser
  +bool isSignedIn
  +Future autoLogin()
  +Future login()
  +Future logout()
}

"appchat::src::providers::authenrication_provider.dart::AuthenticationProvider" o-- "google_sign_in::google_sign_in.dart::GoogleSignIn"
"appchat::src::providers::authenrication_provider.dart::AuthenticationProvider" o-- "google_sign_in::google_sign_in.dart::GoogleSignInAccount"
"flutter::src::foundation::change_notifier.dart::ChangeNotifier" <|-- "appchat::src::providers::authenrication_provider.dart::AuthenticationProvider"
"flutter::src::foundation::diagnostics.dart::DiagnosticableTreeMixin" <|-- "appchat::src::providers::authenrication_provider.dart::AuthenticationProvider"


"appchat::src::models::generated::google::api::annotations.pb.dart::Annotations" o-- "protobuf::protobuf.dart::Extension"

class "appchat::src::models::message.dart::MessageType" {
  +int index
  {static} +List<MessageType> values
  {static} +MessageType HTML
  {static} +MessageType TEXT
}

"appchat::src::models::message.dart::MessageType" o-- "appchat::src::models::message.dart::MessageType"

class "appchat::src::models::message.dart::Message" {
  +int id
  +bool isMine
  +String content
  +DateTime createdAt
  +MessageType messageType
  +Map toJson()
}

"appchat::src::models::message.dart::Message" o-- "appchat::src::models::message.dart::MessageType"

class "appchat::src::models::google_assistant_api.dart::TextType" {
  +int index
  {static} +List<TextType> values
  {static} +TextType HTML
  {static} +TextType PLAIN
}

"appchat::src::models::google_assistant_api.dart::TextType" o-- "appchat::src::models::google_assistant_api.dart::TextType"

class "appchat::src::models::google_assistant_api.dart::GoogleAssistantAPI" {
  +void Function(String, TextType) onText
  +void Function(List<int>) onAudio
  -EmbeddedAssistantClient _assistant
  -List<int> _lastConversationState
  +Future init()
  -AssistRequest _createAssistRequest()
  +void processing()
  -void _handleAssistResponse()
}

"appchat::src::models::google_assistant_api.dart::GoogleAssistantAPI" o-- "appchat::src::models::google_assistant_api.dart::void Function(String, TextType)"
"appchat::src::models::google_assistant_api.dart::GoogleAssistantAPI" o-- "appchat::src::models::google_assistant_api.dart::void Function(List<int>)"
"appchat::src::models::google_assistant_api.dart::GoogleAssistantAPI" o-- "appchat::src::models::generated::google::assistant::embedded::v1alpha2::embedded_assistant.pbgrpc.dart::EmbeddedAssistantClient"

class "appchat::src::screens::login_screen.dart::LoginScreen" {
  +Widget build()
  -Widget _buildBody()
  -Future _handleSignIn()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "appchat::src::screens::login_screen.dart::LoginScreen"

class "appchat::src::screens::setting_screen.dart::SettingScreen" {
  +Widget build()
  -Future _showDialog()
  -Future _handleSignOut()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "appchat::src::screens::setting_screen.dart::SettingScreen"

class "appchat::src::screens::RegisterPage.dart::RegisterPage" {
  +_RegisterPageState createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "appchat::src::screens::RegisterPage.dart::RegisterPage"

class "appchat::src::screens::RegisterPage.dart::_RegisterPageState" {
  -dynamic _name
  +Widget build()
}

"flutter::src::widgets::framework.dart::State<T>" <|-- "appchat::src::screens::RegisterPage.dart::_RegisterPageState"

class "appchat::src::screens::home_screen.dart::HomeScreen" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "appchat::src::screens::home_screen.dart::HomeScreen"

class "appchat::src::screens::chat_screen.dart::ChatScreen" {
  +_ChatScreenState createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "appchat::src::screens::chat_screen.dart::ChatScreen"

class "appchat::src::screens::chat_screen.dart::_ChatScreenState" {
  -List<Message> _messages
  -TextEditingController _controller
  -GoogleAssistantAPI _assistant
  -SpeechToText _speech
  -bool _isInitializing
  +Widget build()
  +void dispose()
  +void initState()
  -void _init()
  +Future showMess()
  -Future _addTheirMessage()
  -Future _addMyMessage()
  -Future _addMessage()
  -Widget _buildAppBar()
  -Widget _buildBody()
  -Widget _buildMyMessage()
  -Widget _buildTheirMessage()
  -void _playAudio()
  +void onGoogleApiTextResponse()
  +void onGoogleApiAudioResponse()
  -Future _initGoogleAssistant()
  -void _onTextReg()
  -void _sendTextMessage()
  +void showError()
}

"appchat::src::screens::chat_screen.dart::_ChatScreenState" o-- "flutter::src::widgets::editable_text.dart::TextEditingController"
"appchat::src::screens::chat_screen.dart::_ChatScreenState" o-- "appchat::src::models::google_assistant_api.dart::GoogleAssistantAPI"
"appchat::src::screens::chat_screen.dart::_ChatScreenState" o-- "speech_to_text::speech_to_text.dart::SpeechToText"
"flutter::src::widgets::framework.dart::State<T>" <|-- "appchat::src::screens::chat_screen.dart::_ChatScreenState"

class "appchat::src::screens::splash_screen.dart::SplashScreen" {
  +State createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "appchat::src::screens::splash_screen.dart::SplashScreen"

class "appchat::src::screens::splash_screen.dart::_SplashScreenState" {
  +Widget build()
  +void initState()
  +dynamic init()
  +dynamic initScreen()
}

"flutter::src::widgets::framework.dart::State<T>" <|-- "appchat::src::screens::splash_screen.dart::_SplashScreenState"


@enduml